# serviceOrientedArchitecture

./: CMakeLists.txt  main.cpp
